kubernetes/apps/syncthing/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: linuxserver/syncthing:2.1.6@sha256:8a381a5a11225475cc4a14ad4fee7c627fdc4fa5804fe3a34febe3aeda9f4e23
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.1"
              memory: "64Mi"
          ports:
            - name: web-ui
              containerPort: 8384
              protocol: TCP
            - name: sync-tcp
              containerPort: 22000
              protocol: TCP
            - name: sync-udp
              containerPort: 22000
              protocol: UDP
            - name: discovery
              containerPort: 21027
              protocol: UDP
          volumeMounts:
            - name: syncthing-config
              mountPath: /config
            - name: syncthing-data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /rest/noauth/health
              port: 8384
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: syncthing-config
          persistentVolumeClaim:
            claimName: syncthing-config-pvc
        - name: syncthing-data
          persistentVolumeClaim:
            claimName: syncthing-data-pvc
