kubernetes/apps/syncthing/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  selector:
    app: syncthing
  ports:
    - name: web-ui
      port: 8384
      targetPort: 8384
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync
spec:
  type: LoadBalancer
  selector:
    app: syncthing
  ports:
    - name: sync-tcp
      port: 22000
      targetPort: 22000
      protocol: TCP
    - name: sync-udp
      port: 22000
      targetPort: 22000
      protocol: UDP
    - name: discovery
      port: 21027
      targetPort: 21027
      protocol: UDP
